--- a/app/src/main/res/layout/fragment_read_book.xml
+++ b/app/src/main/res/layout/fragment_read_book.xml
@@ -40,6 +40,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/unesite_naziv_knjige"
             android:textColor="#000000"
+            android:padding="4dp"
+
             android:textSize="16sp"
             android:enabled="false"
             android:background="@drawable/edittext_background"
@@ -51,6 +53,7 @@
             android:layout_height="wrap_content"
             android:text="@string/autor"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginBottom="4dp" />
 
@@ -60,6 +63,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/unesite_ime_autora"
             android:textColor="#000000"
+            android:padding="4dp"
+
             android:textSize="16sp"
             android:enabled="false"
             android:background="@drawable/edittext_background"
@@ -71,6 +76,7 @@
             android:layout_height="wrap_content"
             android:text="@string/zanr"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginBottom="4dp" />
 
@@ -80,6 +86,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/unesite_zanr_knjige"
             android:textColor="#000000"
+            android:padding="4dp"
+
             android:enabled="false"
             android:textSize="16sp"
             android:background="@drawable/edittext_background"
@@ -91,6 +99,7 @@
             android:layout_height="wrap_content"
             android:text="@string/nakladnik"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginBottom="4dp" />
 
@@ -101,6 +110,8 @@
             android:hint="@string/unesite_ime_nakladnika"
             android:textColor="#000000"
             android:enabled="false"
+            android:padding="4dp"
+
             android:textSize="16sp"
             android:background="@drawable/edittext_background"
             android:layout_marginBottom="8dp" />
@@ -111,6 +122,7 @@
             android:layout_height="wrap_content"
             android:text="@string/lokacija"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginBottom="4dp" />
 
@@ -121,6 +133,8 @@
             android:hint="@string/unesite_lokaciju"
             android:textColor="#000000"
             android:enabled="false"
+            android:padding="4dp"
+
             android:textSize="16sp"
             android:background="@drawable/edittext_background"
             android:layout_marginBottom="8dp" />
@@ -129,6 +143,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text="@string/dostupno"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -150,6 +165,7 @@
             android:layout_height="wrap_content"
             android:text="@string/godina_izdanja"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginBottom="4dp" />
 
@@ -159,6 +175,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/unesite_godinu_izdanja"
             android:textColor="#000000"
+            android:padding="4dp"
+
             android:enabled="false"
             android:textSize="16sp"
             android:inputType="number"
@@ -171,6 +189,7 @@
             android:layout_height="wrap_content"
             android:text="@string/jezik_izdanja"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginBottom="4dp" />
 
@@ -181,6 +200,8 @@
             android:hint="@string/unesite_jezik_izdanja"
             android:textColor="#000000"
             android:enabled="false"
+            android:padding="4dp"
+
             android:textSize="16sp"
             android:background="@drawable/edittext_background"
             android:layout_marginBottom="8dp" />
@@ -192,6 +213,7 @@
             android:text="@string/broj_stranica"
             android:textColor="#000000"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:layout_marginBottom="4dp" />
 
         <EditText
@@ -200,6 +222,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/unesite_broj_stranica"
             android:textColor="#000000"
+            android:padding="4dp"
+
             android:enabled="false"
             android:textSize="16sp"
             android:inputType="number"
@@ -212,6 +236,7 @@
             android:layout_height="wrap_content"
             android:text="@string/uvez"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginBottom="4dp" />
 
@@ -222,6 +247,8 @@
             android:hint="@string/unesite_vrstu_uveza"
             android:textColor="#000000"
             android:enabled="false"
+            android:padding="4dp"
+
             android:textSize="16sp"
             android:background="@drawable/edittext_background"
             android:layout_marginBottom="8dp" />
@@ -233,15 +260,19 @@
             android:layout_height="wrap_content"
             android:text="@string/opis"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginBottom="4dp" />
+
         <EditText
             android:id="@+id/etBookDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="4dp"
+
             android:hint="@string/unesite_opis_knjige"
             android:enabled="false"
-            android:textColor= "#000000"
+            android:textColor="#000000"
             android:textSize="16sp"
             android:background="@drawable/edittext_background"
             android:layout_marginBottom="16dp"
