--- a/app/src/main/res/layout/chat_row.xml
+++ b/app/src/main/res/layout/chat_row.xml
@@ -8,10 +8,12 @@
 
     <ImageView
         android:id="@+id/dp"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
         android:layout_centerVertical="true"
-        android:layout_marginStart="10dp" />
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
 
     <ImageView
         android:id="@+id/online_status"
