--- a/app/src/main/res/layout/fragment_my_books.xml
+++ b/app/src/main/res/layout/fragment_my_books.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:background="@color/light_purple"
-        android:queryHint="pretrazi_knjige" />
+        android:background="@color/light_purple" />
 
     <!-- Gumb za dodavanje nove knjige -->
     <Button
