--- a/app/src/main/res/layout/receive_message_row.xml
+++ b/app/src/main/res/layout/receive_message_row.xml
@@ -7,8 +7,9 @@
         android:id="@+id/rl_receive_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="65dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/receive_message_bg">
 
         <TextView
