--- a/app/src/main/res/layout/send_image_row.xml
+++ b/app/src/main/res/layout/send_image_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_marginBottom="10dp"
     android:layout_height="wrap_content">
 
     <RelativeLayout
@@ -9,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/send_image_bg">
 
         <ImageView
@@ -17,45 +19,19 @@
             android:layout_height="260dp"
             android:background="#1C1B1B" />
 
-        <TextView
-            android:id="@+id/location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/image"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="15dp"
-            android:text="San Francisco"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/round_circle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/image"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
-            android:layout_toStartOf="@+id/location"
-            android:text="●"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/image"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
-            android:layout_toStartOf="@+id/round_circle"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="10dp"
             android:text="18:04"
             android:textColor="#FFFFFF"
             android:textSize="12sp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:layout_below="@id/time" />
     </RelativeLayout>
 </RelativeLayout>
