--- a/app/src/main/res/layout/send_message_row.xml
+++ b/app/src/main/res/layout/send_message_row.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/send_message_bg">
 
         <TextView
